# fastapi-realworld-example

./: .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: docker.yaml  style.yaml  test.yaml
alembic/: README.md  env.py
alembic/versions/: df150518319e_create_tables.py
app/: main.py  models.py  schemas.py
app/api/: deps.py
app/api/crud/: user.py
app/api/routes/: user.py
app/core/: config.py  database.py  security.py
conduit/: crud.py  exceptions.py  main.py  models.py
conduit/api/: dependencies.py  deps.py
conduit/api/routes/: article.py  articles.py  comment.py  health.py  profile.py  tag.py  user.py  users.py
conduit/core/: config.py  database.py  security.py  settings.py
conduit/core/utils/: slug.py
conduit/crud/: __init__.py  article.py  comment.py  favorite.py  follower.py  tag.py  user.py
conduit/schemas/: article.py  articles.py  comment.py  profile.py  token.py  user.py  utils.py
conduit/services/: article.py  auth.py  comment.py  favorite.py  follower.py  password.py  tag.py  user.py
etc/docker/: Dockerfile  Dockerfile.chainguard  Dockerfile.distroless  Dockerfile.multistage
etc/shared/: grafana-datasources.yml  otel-collector.yml  prometheus.yml  tempo.yml
postman/: run-api-tests.sh
tests/: test_conduit.py
