[tool.poetry]
name = "app"
version = "0.1.0"
description = "Backend implementation of Realworld Application (Medium Clone) with FastAPI"
authors = ["Luiz Carlos Cosmi Filho <luizcarloscosmifilho@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
my-script = "app.main:main"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
passlib = "^1.7.4"
psycopg2 = "^2.9.9"
python-jose = "^3.3.0"
opentelemetry-distro = "^0.45b0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-exporter-otlp = "^1.24.0"
opentelemetry-instrumentation-logging = "^0.45b0"
opentelemetry-exporter-zipkin = "^1.24.0"
opentelemetry-instrumentation-sqlalchemy = "^0.45b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
