[tool.poetry]
name = "conduit"
version = "0.1.0"
description = "Backend implementation of Realworld Application (Medium Clone) with FastAPI"
authors = ["Luiz Carlos Cosmi Filho <luizcarloscosmifilho@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
passlib = "^1.7.4"
psycopg = "^3.2.3"
python-jose = "^3.3.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-api = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-instrumentation-logging = "^0.45b0"
opentelemetry-instrumentation-sqlalchemy = "^0.45b0"
opentelemetry-exporter-prometheus = "^0.45b0"
opentelemetry-exporter-otlp = "^1.24.0"
python-slugify = "^8.0.4"
setuptools = "<=81.0.0"
sqlmodel = "^0.0.37"
alembic = "^1.14.1"
pydantic = "^2.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "skip"

[tool.isort]
profile = "black"
extra_standard_library = ["setuptools", "pkg_resources"]
known_test = ["pytest"]
known_first_party = ["conduit"]
sections = ["FUTURE", "STDLIB", "TEST", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
