[tool.poetry]
name = "conduit"
version = "0.1.0"
description = "Backend implementation of Realworld Application (Medium Clone) with FastAPI"
authors = ["Luiz Carlos Cosmi Filho <luizcarloscosmifilho@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "conduit"}]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.135.0"}
starlette = "^1.0.0"
uvicorn = "^0.44.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.14.0"
sqlalchemy = "^2.0.49"
sqlmodel = "^0.0.38"
psycopg = "^3.3.3"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
cryptography = "^46.0.7"
python-slugify = "^8.0.4"
opentelemetry-sdk = "^1.40.0"
opentelemetry-api = "^1.40.0"
opentelemetry-instrumentation-fastapi = "^0.61b0"
opentelemetry-instrumentation-logging = "^0.61b0"
opentelemetry-instrumentation-sqlalchemy = "^0.61b0"
opentelemetry-exporter-otlp = "^1.40.0"
setuptools = "<=81.0.0"
alembic = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "skip"

[tool.isort]
profile = "black"
extra_standard_library = ["setuptools", "pkg_resources"]
known_test = ["pytest"]
known_first_party = ["conduit"]
sections = ["FUTURE", "STDLIB", "TEST", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100

[dependency-groups]
test = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-pyproject (>=1.2.3,<2.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
